# AisdLabs

lab_1/: CMakeLists.txt  Makefile  main.c
lab_1/src/: Matrix.c  Matrix.h  printMatrix.c  processMatrix.c  readMatrix.c
lab_2/: CMakeLists.txt  Makefile  input.txt  main.cpp  output.txt
lab_2/Lib/: Array.h  IQueue.h  Lib.h  QueueList.h  QueueVector.h
lab_2/Src/: Controllers.h  Entities.h  Exceptions.h  Services.h  View.h
lab_2/Src/Controllers/: IController.h
lab_2/Src/Controllers/ProcessScheduler/: ProcessSchedulerController.cpp  ProcessSchedulerController.h
lab_2/Src/Controllers/ProcessScheduler/Realization/: RoundRobinController.cpp  RoundRobinController.h
lab_2/Src/Exceptions/: ConvertException.h  StartupException.h
lab_2/Src/Models/Entities/: ProcessModel.cpp  ProcessModel.h
lab_2/Src/Models/Services/ProcessScheduler/: ProcessSchedulerService.cpp  ProcessSchedulerService.h
lab_2/Src/Models/Services/ProcessScheduler/Realization/: RoundRobinService.cpp  RoundRobinService.h
lab_2/Src/View/: Output.cpp  Output.h
lab_3/: CMakeLists.txt  Makefile  main.cpp  printMessage.txt  startup.cpp
lab_3/lib/: ActionResult.h  Deq.h  LinkedList.h  Pair.h  RemoveIterator.h  lib.h
lab_3/src/controller/: TableController.h
lab_3/src/view/: View.h
lab_3/table/: CompositeKey.h  Item.h  Table.h
lab_3/table/KeySpaces/: IKey.h  IKeySpace.h  Node.h
lab_3/table/KeySpaces/KeySpace1/: Key1.h  KeySpace1.h
lab_3/table/KeySpaces/KeySpace2/: Key2.h  KeySpace2.h
lab_4a/: BIG_FILE.txt  CMakeLists.txt  Makefile  getMapFromFile.cpp  getMapFromFile.h  input.txt  mainTest.cpp  task2ast.cpp  timing.cpp  tmp.dot
lab_4a/lib/: ActionResult.h  Array.h  Deq.h  DynamicArray.h  Map.h  RemoveIterator.h  lib.h
lab_4a/src/controller/: MapController.h
lab_4a/src/view/: View.h
lab_4b/: CMakeLists.txt  main.cpp  startup.cpp  test.cpp  timing.cpp
lab_5/: CMakeLists.txt  Makefile  input.txt  main.cpp  startup.cpp  test.cpp  tmp.dot
(+22 files in other folders)
